<resources>

    <string name="app_name">Digi Recordbox</string>
    
    <string name="tgl_recorder_start">Record</string>
    <string name="tgl_recorder_pause">Pause</string>
    <string name="btn_recorder_stop">Stop</string>
    <string name="btn_recorder_cancel">Cancel</string>
    
    <string name="tgl_player_play">Play</string>
    <string name="tgl_player_pause">Pause</string>
    <string name="btn_player_stop">Stop</string>
    
    
    <string name="option_menu_logout">Log out</string>
    <string name="option_menu_list">Recording list</string>
    <string name="option_menu_exit">Exit</string>
    <string name="option_menu_mediaplayer">Media player</string>
    
    <string name="btn_login">Log in</string>
    <string name="tv_email">E-mail:</string>
    <string name="tv_password">Password:</string>
    
    <string name="message_authentication_failed">Authentication failed</string>

</resources>
