<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
    android:layout_width="320dp"
    android:layout_height="120dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp" >

        <ToggleButton
            android:id="@+id/tgl_player_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:textOff="@string/tgl_player_play"
            android:textOn="@string/tgl_player_pause" />

        <Button
            android:id="@+id/btn_player_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/btn_player_stop" />

    </LinearLayout>

</LinearLayout>
